--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+button,
+input{
+  font-family: "Funnel Sans", sans-serif;
+}
+
+body{
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow:hidden;
+}
+
+.blurred {
+  filter: blur(5px); 
+  pointer-events: none; 
+  user-select: none; 
+}
+
+.blurred * {
+  pointer-events: none; 
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
